Fix layout issues for popup
Also errata table on very narrow devices

--- a/src/app/pages/errata-summary/table/table.scss
+++ b/src/app/pages/errata-summary/table/table.scss
@@ -5,7 +5,6 @@
     .summary-table-mobile {
         @include set-font(helper-label);
 
-
         background-color: text-color(white);
         border: thin solid ui-color(form-border);
         border-collapse: collapse;
@@ -120,6 +119,7 @@
         }
 
         th:first-child {
+            max-width: 40vw;
             width: 15rem;
         }
     }
